--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "@repo/drag-n-drop": "workspace:*",
+    "@repo/dropzone": "workspace:*",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
